--- a/en/index.qmd
+++ b/en/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "A Conversation on Causality at Our Table"
+title: "A Conversation on Causality at Our Table (EN)"
 format:
   html:
     toc: true
@@ -9,7 +9,7 @@ listing:
     - study-design-2.qmd
   sort: "date desc"
   feed:
-    title: "A Conversation on Causality at Our Table"
+    title: "A Conversation on Causality at Our Table (EN)"
     items: 20
     type: full
 ---
