--- a/jp/frequentist-6.qmd
+++ b/jp/frequentist-6.qmd
@@ -1,19 +1,24 @@
 ---
 title: "Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size"
-description: "The laws derived from the frequentist theory are not mere abstractions; they can be verified through simulation experiments. This episode is illustrates the relationship between sample size and power in R simulations."
+description: "統計学では、p値とサンプルサイズ設計が対になってエラーをコントロールします。サンプルサイズ設計に関するcoffee-chat guide。"
+tags:
+  - Probability model
+  - P-value 
+  - R simulation
+  - Study design
 format:
   html:
     toc: true
 ---
 
-::: hero-header
+::: {.hero-header}
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
 # Frequentist Experiments III − Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size
 
 ::: {.serif-block .text-right}
-Keywords: probability model, p-value, simulation, study design, survival/competing-risk
+Keywords: probability model, p-value, R simulation, study design
 :::
 
 ------------------------------------------------------------------------
