--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -1,7 +1,19 @@
 ---
+title: "A Conversation on Causality at Our Table (JP)"
 format:
   html:
     toc: true
+listing:
+  contents:
+    - study-design-1.qmd
+    - study-design-2.qmd
+    - study-design-3.qmd
+    - glossary.qmd
+  sort: "date desc"
+  feed:
+    title: "A Conversation on Causality at Our Table (JP)"
+    items: 20
+    type: full
 ---
 
 ::: {.hero-header}
@@ -28,6 +40,19 @@ format:
 - [A First Step into Survival and Competing Risks Analysis with R]　【12/15公開予定】
 - [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]　【12/15公開予定】
 
+::: {.callout-note appearance="simple" title="内容が知りたい方はこちら"}
+- A Story of Coffee Chat and Research Hypothesis
+　研究は「**どんな問いを立てるか**」から始まります。PICO/PECO、比較しやすい集団・一般化しやすい集団、アウトカムの選び方...。娘は父に研究の出発点について尋ねます。
+- Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes
+　父は娘に語ります。「呪文のような**R関数**も、データがどの**確率モデル**から生じそうかをイメージできれば整理しやすくなる」これからデータを解析するという方もぜひ。
+- Outcomes: The Bridge from Data Collection to Analysis
+　オンコロジー領域の研究において、全生存期間（OS）か無増悪生存期間（PFS）かが、常に論争になることをご存知でしょうか。娘は**アウトカムの定義**を確認します。
+- A First Step into Survival and Competing Risks Analysis with R
+　生存時間解析の落とし穴は、イベント定義やコーディングにあります。**データ収集の注意点**から**Rを用いた競合リスク解析**のデモまで。
+- When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys
+　**バイアス**は研究デザインやデータ収集方法を工夫しないと解消できません。娘は調査で気を付けておくべき点について父に尋ねます。
+:::
+
 このエピソードのRスクリプト一式は、こちらからダウンロードできます。R パッケージや、ここで紹介した解析手順をもう一度たどってみたい方はぜひ。
 
 - [study-design.R](../from-coffee-chat-to-r/study-design.R)
@@ -44,7 +69,16 @@ format:
 - [P-Value Explanations That Seem Plausible at First Glance]
 - [Beyond 0.05: Interpreting P-Values in a Clinical Trial]
 
-これとこの次のエピソードのRスクリプト一式はこちらから。
+::: {.callout-note appearance="simple" title="内容が知りたい方はこちら"}
+- Reading a Paper over a Cup of Coffee
+　はじめて論文を読んだとき、**統計の用語**が意味不明だと思いませんでしたか？同じ気持ちを抱いた娘は父に質問します。
+- P-Value Explanations That Seem Plausible at First Glance
+　がん臨床試験を題材に「仮想的に何度も研究を繰り返したときに、数字はどう振る舞うか？」という**頻度論的なものの見方**を父は語ります。
+- Beyond 0.05: Interpreting P-Values in a Clinical Trial
+　父は娘に語ります。「p値を正しく解釈するにはMethodsを読まなければならない」p値に関するアメリカ統計協会の声明に関するエピソード。
+:::
+
+この回と次のエピソードのRスクリプト一式はこちらから。
 
 - [frequentist.R](../from-coffee-chat-to-r/frequentist.R)
 
@@ -56,7 +90,16 @@ format:
 - [Understanding Confidence Intervals via Hypothetical Replications in R]
 - [Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size]
 
-これとこの次のエピソードのRスクリプト一式はこちらから。
+::: {.callout-note appearance="simple" title="内容が知りたい方はこちら"}
+- R Demonstration of Bias in Kaplan-Meier Under Competing Risks
+　頻度論が導く法則は、ただの抽象ではなく**シミュレーション実験**で確認することができます。Rに不慣れな方も、スクリプトを流すだけですので結果を再現してみてください。
+- Understanding Confidence Intervals via Hypothetical Replications in R
+　95%信頼区間はどういう意味で**95%**なのでしょうか？娘はRを用いたシミュレーション実験で確かめます。
+- Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size
+　頻度論の統計学では、**p値**と**サンプルサイズ設計**が対になってエラーをコントロールします。サンプルサイズ設計に関する入門編。
+:::
+
+この回と前のエピソードのRスクリプト一式はこちらから。
 
 - [frequentist.R](../from-coffee-chat-to-r/frequentist.R)
 
@@ -70,6 +113,21 @@ format:
 - [When Odds Ratios Approximate Risk Ratios—and When They Fail]
 - [From Risk and Rate to Survival and Hazard]
 - [Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example]
+
+::: {.callout-note appearance="simple" title="内容が知りたい方はこちら"}
+- Silent Confusions Hidden in Percentages
+　疫学の研究結果の多くは、わかりやすくパーセントで報告されますが、それが数字が独り歩きする理由だったとは。**ワクチン有効率**の注意点を父は語ります。
+- Who Is This Percentage About Target Populations and Attributable Fractions
+　数字が独り歩きするのは、計算が理解されていない事だけが理由ではありません。言葉の裏にある**ターゲット集団**の違いについて。
+- Understanding Collapsibility of Effect Measures in Marginal and Stratified Analyses with R
+　いわゆる調整解析と**Simpsonのパラドックス**の関係は？がん臨床試験で用いられる層別Cox回帰にもつながるエピソード。
+- When Odds Ratios Approximate Risk Ratios and When They Fail
+　「オッズ比より**オッズ比の平方根**の方がよい一面もあるんだ」父は疫学の常識を揺さぶります。
+- From Risk and Rate to Survival and Hazard
+　「生存曲線やハザード比について納得感が足りないの」**生存時間解析の基礎**を娘は父に学びます。
+- Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example
+　リスク比、ハザード比、そして**時間とともに変化する効果**。Rデモを通じて、因果推論に先立って立体的なデータの見方が静かに育ちます。
+:::
 
 このエピソードのRスクリプト一式はこちらから。
 
@@ -97,13 +155,24 @@ format:
 
 ### 8. Causal Inference — 因果を見つけるために
 
-有効非循環グラフ（DAG）、共通原因、合流点、中間媒介因子、バックドア基準。「もし〜だったら？」を統計的に考えるための**因果の言葉**を、確率に関する必要最小限の数式を交えて扱います。
-
 - [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure]
 - [A Subtle Distinction between Common Causes and Confounders]
 - [DAGs and Conditional Distributions: Two Languages for the Same Structure]
 - [A Circle, an Equation, and a Cylinder]
 - [Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias]
+
+::: {.callout-note appearance="simple" title="内容が知りたい方はこちら"}
+- [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure]
+　有効非循環グラフ（DAG）、共通原因、合流点、中間媒介因子。「もし...だったら？」を統計的に考えるための**因果の言葉**へ父はいざないます。
+- [A Subtle Distinction between Common Causes and Confounders]
+　交絡因子と共通原因は異なる概念だった。現在でも論争の続く交絡因子の正確な定義について、DAGを使って一歩近づきます。
+- [DAGs and Conditional Distributions: Two Languages for the Same Structure]
+　DAGと確率モデルの関係は？因果モデルの意味を確率に関する必要最小限の数式を交えて扱います。
+- [A Circle, an Equation, and a Cylinder]
+　それではDAGと確率モデルとRubin因果モデルはどういう関係にあるの？娘の疑問への答え。
+- [Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias]
+　わかるようでわからない**ブロック**という操作の正式な解説。
+:::
 
 ### 9. Publish a Paper — 研究のその先
 
