--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -1,6 +1,6 @@
 ---
 title: "When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys"
-description: "How bias enters clinical surveys. Through a coffee chat, the daughter learns how selection bias, information bias, and confounding arise at the study design stage."
+description: "バイアスは解析ではなく、研究デザインと調査方法から生まれます。選択バイアス・情報バイアス・交絡を、父と娘の会話で整理するcoffee-chat guide。調査研究を始める前に知っておきたい視点です。"
 tags:
   - Bias
   - Language & writing
