--- a/en/index.qmd
+++ b/en/index.qmd
@@ -216,5 +216,6 @@ First, reading the **Study Design** series will give you an overview of the clin
 
 While each episode stands independently, reading the whole reveals how everyday life, clinical practice, causality, data, cognition, and language connect as one flow. Gradually, a map of the research endeavor sketches itself in your mind. Grab your favorite drink and enjoy the journey of conversation between the two.
 
-This site shares selected R-related posts via  
-<a href="https://www.r-bloggers.com">R-bloggers</a>
+
+------------------------------------------------------------------------
+This site shares selected R-related posts via <a href="https://www.r-bloggers.com">R-bloggers</a>
