--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Outcomes: The Bridge from Data Collection to Analysis"
-description: "OSかPFS か——アウトカムの選択は、解析以前に研究の意味を決めます。オンコロジー研究を題材に、アウトカム定義の重要性を確かめる coffee-chat guide。データ収集と解析をつなぐ視点を育てます。"
+description: "OSかPFS か—アウトカムの選択は、解析以前に研究の意味を決めます。オンコロジー研究を題材に、アウトカム定義の重要性を確かめる coffee-chat guide。データ収集と解析をつなぐ視点を育てます。"
 tags:
   - Clinical trial
   - Language & writing
